# zoti

./: .gitignore  README.md
docs/: .gitignore  Gemfile  Makefile  _bak.index.md  _config.yml  about.markdown  about.md  index.markdown  index.md  overview.md  tools.md
docs/_data/: navigation.yml
docs/_includes/: image_caption.html  nav.html  note.html
docs/_layouts/: default.html
docs/assets/css/: mod.css
docs/assets/images/: Pitch_flow.drawio  ZOTI_flow.drawio
docs/example/: index.md
docs/example/prod-cons/: index.md
docs/example/prodcons-unix/: index.md
docs/flows/: genny.md  index.md
docs/zoti-ftn/: .buildinfo  agnostic.html  backend-c.html  genindex.html  index.html  language.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/zoti-ftn/_modules/: index.html
docs/zoti-ftn/_sources/: language.md.txt
docs/zoti-gen/: .buildinfo  api-reference.html  genindex.html  index.html  input-format.html  objects.inv  py-modindex.html  rendering.html  search.html  searchindex.js  template-libs.html  tutorial.html
docs/zoti-gen/_modules/: index.html
docs/zoti-gen/_sources/: index.md.txt  input-format.md.txt  tutorial.md.txt
docs/zoti-graph/: .buildinfo  api-reference.html  genindex.html  genny.html  index.html  objects.inv  py-modindex.html  script.html  search.html  searchindex.js  the-zoti-graph-model.html  tutorial.html
docs/zoti-graph/_modules/: index.html
docs/zoti-graph/_sources/: genny.md.txt  index.md.txt
docs/zoti-tran/: .buildinfo  api-reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/zoti-tran/_modules/: index.html
docs/zoti-tran/_sources/: api-reference.md.txt  index.md.txt
docs/zoti-yaml/: .buildinfo  api-reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  syntax-reference.html  tutorial.html
docs/zoti-yaml/_modules/: index.html
docs/zoti-yaml/_sources/: index.md.txt  syntax-reference.md.txt  tutorial.md.txt
example/: .gitignore  Makefile  Pipfile  zoticonf.toml
example/app/ProdCons/: Proc.zog  Src.zog
example/apps/kernels/: MainComp.dfc  Preproc.dfc  Src.dfc  StreamQ_link_activity.dfc
example/apps/pc/: ProdCons.zog
example/apps/prob-pc/: ProdCons.zog
example/graphlib/Lib/: Probes.zog  probes_c.dfc
example/prod-cons/: Makefile  README.md
example/prod-cons/docs/: index.md  pc.drawio  zoti.drawio
example/prod-cons/typelib/: Monitor.ftn  StreamQ.ftn
example/prod-cons/zoti-scripts/: Makefile
example/prodcons-unix/: README.md
example/prodcons-unix/docs/: pc.drawio  zoti.drawio
example/prodcons-unix/zoti-scripts/: Makefile  Pipfile  zoticonf.toml
example/scripts/unix_c/: g2b.py  ports.py  postproc.py
example/targetlib/: Makefile  dfl_cfg.h  dfl_evt.h
example/templatelib/Generic/: Dfl.py  IO.py  dfl.c
example/templatelib/Skeleton/: Compute.py
example/typelib/: Common.ftn  Common.jsftn  Tst.ftn
example/zoti-scripts/: Makefile  Pipfile  zoticonf.toml
example/zoti-scripts/unix_c/: dumputils.py  g2b.py  gendepl.py  genspec.py  (+1 more)
zoti-ftn/: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
zoti-ftn/docs/source/: agnostic.md  backend-c.md  conf.py  index.md
zoti-ftn/src/zoti_ftn/: __init__.py  __main__.py  core.py  exceptions.py  lang.py  tokens.py  util.py
zoti-ftn/src/zoti_ftn/backend/: c.py
zoti-ftn/tests/: test_unit.py
zoti-ftn/tests/inputs/: Mod1.ftn  Mod1.yaml  Mod2.ftn  Mod2.yaml
zoti-gen/: .env  Pipfile  README.md  pyproject.toml
zoti-gen/docs/source/: api-reference.md  conf.py  index.md  input-format.md  rendering.md  template-libs.md
zoti-gen/docs/source/assets/: deps.json  main.genspec.dot  out.c  out1.c  zoticonf.toml
zoti-gen/exp/: Makefile  zoticonf.toml
zoti-gen/exp/Generic/: __init__.py  templates.c
zoti-gen/exp/Skeleton/: Compute.py
zoti-gen/src/zoti_gen/: .#util.py  __init__.py  __main__.py  builder.py  core.py  exceptions.py  handler.py  io.py  jinja_extensions.py  render.py  util.py
zoti-gen/tests/: test_gen.py
zoti-gen/tests/inputs/: genspec_leafs.yaml  genspec_main.yaml
zoti-gen/tests/inputs/Generic/: Generic.py  IO.py  templates.c
zoti-gen/tests/inputs/Skeleton/: Compute.py  templates.c
zoti-graph/: LICENSE  Pipfile  README.md  pyproject.toml
zoti-graph/docs/source/: api-reference.md  conf.py  index.md  script.md  the-zoti-graph-model.md  tutorial.md
zoti-graph/docs/source/assets/: api.drawio  drawing.drawio
zoti-graph/src/zoti_graph/: __init__.py  __main__.py  _main_utils.py  appgraph.py  core.py  exceptions.py  io.py  parser.py  sanity.py  script.py  tokens.py  util.py
zoti-graph/src/zoti_graph/genny/: .#__init__.py  __init__.py  core.py  parser.py  sanity.py  translib.py
zoti-graph/tests/: test_graph.py
zoti-graph/tests/inputs/: graph1.yaml
zoti-tran/: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
zoti-tran/docs/source/: conf.py  index.md
zoti-tran/src/zoti_tran/: __init__.py  sanitylib.py  script.py  translib.py
zoti-tran/tests/: test_tran.py
zoti-tran/tests/inputs/: graph1.yaml
zoti-yaml/: .gitignore  CHANGELOG.md  Pipfile  README.md  pyproject.toml  tmp.yaml
zoti-yaml/docs/source/: api-reference.md  back-to-zoti.html  conf.py  index.md  syntax-reference.md  tutorial.md
zoti-yaml/example/: Debug  Makefile  zoticonf.toml
zoti-yaml/example/app/ProdCons/: Sink.zog
zoti-yaml/example/app/kernels/: MainComp.dfc  Sink.dfc  StreamQ.h  StreamQ_tslot.dfc
zoti-yaml/example/scripts/unix_c/: g2b.py  genspec.py  translib.py
zoti-yaml/example/templatelib/Skeleton/: templates.c
zoti-yaml/example/typelib/: DflSys.ftn  Res.ftn  Res.jsftn  Tst.jsftn
zoti-yaml/src/zoml/: __init__.py  __main__.py  core.py  dumper.py  exceptions.py  handlers.py  loader.py  module.py
zoti-yaml/src/zoti_yaml/: .#loader.py  __init__.py  __main__.py  _main_utils.py  core.py  dumper.py  exceptions.py  handlers.py  loader.py  module.py  project.py
zoti-yaml/tests/: test_scenario.py
zoti-yaml/tests/scenario1/: main.zoml  mod1.zoml  toy.yaml  zoticonf.toml
zoti-yaml/tests/scenario1/sub/: mod.zoml  test.txt
(+64 files in other folders)
