[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zoti-graph"
version = "0.1.0"
authors = [
  { name="George Ungureanu", email="george.ungureanu@ericsson.com" },
]
description = """A graph API for manipulating the structure of actor models."""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'zoti_yaml >= 0.1.0',
]

[project.urls]
"Homepage" = "http://TBA.io"
"Bug Tracker" = "http://TBA.io"

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "-ra -q"
addopts = "-s"
testpaths = [
    "tests",
]
filterwarnings = "ignore:.*Passing field metadata as keyword arguments is deprecated"
log_cli = true
log_cli_level = "INFO"


[tool.coverage.report]
omit = ["src/zoti_graph/exceptions.py", "tests/*", "*zoti_yaml*"]
exclude_lines =[
    "pass"
]
