[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zoti-tran"
version = "0.1.0"
authors = [
  { name="George Ungureanu", email="george.ungureanu@ericsson.com" },
]
description = """Script handler and generic agnostic script functions for the ZOTI project."""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'PyYAML ~= 6.0',
]

[project.urls]
"Homepage" = "http://TBA.io"
"Bug Tracker" = "http://TBA.io"

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "-ra -q"
addopts = "-s"
testpaths = [
    "tests",
]

[tool.coverage.report]
omit = ["*zoti_yaml*", "*zoti_graph*", "*zoti_ftn*", "tests/*"]
