[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zoti-yaml"
version = "0.2.0"
authors = [
  { name="George Ungureanu", email="george.ungureanu@ericsson.com" },
]
description = """A small YAML language extension to work with modules."""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'PyYAML ~= 6.0',
]

[project.urls]
"Homepage" = "https://ericsson.github.io/zoti/zoti-yaml/"
"Bug Tracker" = "https://github.com/Ericsson/zoti/issues"

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "-ra -q"
addopts = "-s"
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"


[tool.coverage.report]
omit = ["src/zoti_yaml/exceptions.py", "tests/*"]
